tests/pp-fail/bad_undef_flect.fl.0.exp
Error: bad_undef_flect.fl(1,8): Definition identifiers cannot start with 'Flect_'
\undef Flect_Foo
       ^         
